@@ -1,6 +1,8 @@
-use ExtUtils::MakeMaker 6.70;
+use strict;
+use warnings;
+use ExtUtils::MakeMaker;
 
-WriteMakefile(
+my %conf = (
 	NAME         => 'Expect',
 	VERSION_FROM => 'lib/Expect.pm',
 	PREREQ_PM    => {
@@ -15,21 +17,17 @@ WriteMakefile(
 		'Exporter'   => 0,
 		'Errno'      => 0,
 	},
-	CONFIGURE_REQUIRES => {
-        'ExtUtils::MakeMaker' => '6.70',
-    },
-	TEST_REQUIRES => {
-		'Test::More'      => '1.00',
-		'Test::Exception' => '0.32',
-
-		# standard modules:
-		'File::Temp' => 0,
-	},
 	ABSTRACT_FROM => 'lib/Expect.pm',
 	clean        => { 'FILES' => '*.log' },
 	dist         => { COMPRESS => 'gzip -9f', SUFFIX => 'gz' },
-	($ExtUtils::MakeMaker::VERSION >= 6.3002 ? ('LICENSE'=> 'perl') : ()),
-	(eval { ExtUtils::MakeMaker->VERSION(6.46) } ? (META_MERGE => {
+);
+
+if (eval { ExtUtils::MakeMaker->VERSION(6.3002) }) {
+	$conf{LICENSE} = 'perl';
+}
+
+if (eval { ExtUtils::MakeMaker->VERSION(6.46) }) {
+	$conf{META_MERGE} = {
 		'meta-spec' => { version => 2 },
 		resources => {
 			repository => {
@@ -37,8 +35,38 @@ WriteMakefile(
 				url  => 'http://github.com/szabgab/expect.pm.git',
 				web  => 'http://github.com/szabgab/expect.pm',
 			}
-		}})
-		: ()
-	),
+		}
+	};
+}
+
+my %configure_requires = (
+        'ExtUtils::MakeMaker' => '6.64',
 );
+my %build_requires = ();
+my %test_requires = (
+		'Test::More'      => '1.00',
+		'Test::Exception' => '0.32',
+
+		# standard modules:
+		'File::Temp' => 0,
+);
+
+###   merging data "standard code"
+if (eval { ExtUtils::MakeMaker->VERSION(6.52) }) {
+	$conf{CONFIGURE_REQUIRES} = \%configure_requires;
+} else {
+	%{ $conf{PREREQ_PM} } = (%{ $conf{PREREQ_PM} }, %configure_requires);
+}
+
+if (eval { ExtUtils::MakeMaker->VERSION(6.5503) }) {
+	$conf{BUILD_REQUIRES} = \%build_requires;
+} else {
+	%{ $conf{PREREQ_PM} } = (%{ $conf{PREREQ_PM} }, %build_requires);
+}
+if (eval { ExtUtils::MakeMaker->VERSION(6.64) }) {
+	$conf{TEST_REQUIRES} = \%test_requires;
+} else {
+	%{ $conf{PREREQ_PM} } = (%{ $conf{PREREQ_PM} }, %test_requires);
+}
+WriteMakefile(%conf);
 
