@@ -1,3 +1,8 @@
+    Eliminate the requirement for ExtUtils::MakeMaker 1.70.
+       Now any ExtUtils::MakeMaker should work on the client side.
+
+    In the tests, add special treatment for $^O=midnightbsd.
+
 1.30 2014-08-22
     RT #47834
     After a failed call to ->expect the ->match, and ->after will return undef
